add new parahraf

--- a/index.html
+++ b/index.html
@@ -41,6 +41,14 @@
                 stanowisku sprzedawcy.<br>Mam 27 Lat i postanowiłam coś <em>zmienić</em> w życiu zawodowym. Dlatego
                 pomyślałam <strong>chcę</strong> spróbować programowania.
             </p>
+            <p>
+                Chciałabym przedstawić kilka informacji o mnie. Pochodze z małej miejscowiści w okolicy
+                Kosowa Lackiego.
+                <br>
+                Ukończyłam tam liceum, a potem wyjechałam do Warszawy. Obecnie pracuje w piekarni na
+                stanowisku sprzedawcy.<br>Mam 27 Lat i postanowiłam coś <em>zmienić</em> w życiu zawodowym. Dlatego
+                pomyślałam <strong>chcę</strong> spróbować programowania.
+            </p>
         </section>
         <section class="section" id="moje-hobby">
             <h2>Moje hobby</h2>
